# file-manager

./: .gitignore  README.md  pyproject.toml
file_manager/: error_handler.py  lexical.py  main.py  semantic.py  syntactic.py
file_manager/parser/: FileManagerLexer.tokens  FileManagerListener.py  FileManagerParser.py  FileManagerVisitor.py
manager/: bash_gen.py  lexical.py  main.py  semantic.py  syntactic.py
manager/parser/: FileManager.g4  FileManager.interp  FileManager.tokens  FileManagerLexer.interp  FileManagerLexer.py  FileManagerListener.py  FileManagerParser.py  FileManagerVisitor.py
tests/: error_test.fm  script_generate_test_files.sh  success_test.fm  suggestion.fm
tests/errors/: lexical_error_1.fm  lexical_error_2.fm  lexical_error_3.fm  semantic_error_1.fm  semantic_error_2.fm  semantic_error_3.fm  semantic_error_4.fm  semantic_error_5.fm  syntactic_error_1.fm  syntactic_error_2.fm  syntactic_error_3.fm  syntactic_error_4.fm
tests/successes/: 1.fm  2.fm  3.fm  4.fm  5.fm
